# babel

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mix.exs  pyproject.toml
assets/: tailwind.config.js
assets/js/: app.js
babel/: __init__.py  cli.py  config.py  proxy.py
babel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: config.exs  dev.exs  prod.exs  runtime.exs
data/: config.example.yaml  config.yaml
lib/: babel_web.ex
lib/babel/: application.ex  config_loader.ex  stats.ex
lib/babel_web/: endpoint.ex  router.ex  telemetry.ex
lib/babel_web/components/: layouts.ex
lib/babel_web/components/layouts/: app.html.heex  root.html.heex
lib/babel_web/controllers/: api_controller.ex  error_html.ex  error_json.ex  session_controller.ex  session_html.ex
lib/babel_web/controllers/session_html/: new.html.heex
lib/babel_web/live/: chat_live.ex  dashboard_live.ex  providers_live.ex  users_live.ex
lib/babel_web/plugs/: require_auth.ex
